# Athena-Core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README
dependencies/: CMakeLists.txt
include/: CMakeLists.txt
include/Athena-Core/: CMakeLists.txt  Config.h.in  Declarations.h  Describable.h  Iterators.h  Path.h  Prerequisites.h  PropertiesList.h  Scripting.h  StringConverter.h  StringUtils.h  StringsMap.h  Variant.h
include/Athena-Core/Data/: ConfigFile.h  DataStream.h  FileDataStream.h  GenericDataStream.h  LocationManager.h  Serialization.h
include/Athena-Core/Log/: ConsoleLogListener.h  Declarations.h  ILogListener.h  LogManager.h  XMLLogListener.h
include/Athena-Core/OSX/: Timer.h
include/Athena-Core/Signals/: Declarations.h  Signal.h  SignalsList.h  SignalsUtils.h
include/Athena-Core/Utils/: Describable.h  Iterators.h  Path.h  PropertiesList.h  Singleton.h  StringConverter.h  StringUtils.h  StringsMap.h  Timer.h  Variant.h
include/Athena-Core/Utils/OSX/: Timer.h
include/Athena-Core/Utils/WIN32/: Timer.h
scripting/: CMakeLists.txt  module.cpp
scripting/Signals/: Signal.cpp  SignalsList.cpp  SignalsUtils.cpp
scripting/Utils/: Describable.cpp  PropertiesList.cpp  Timer.cpp
src/: CMakeLists.txt  Describable.cpp  Path.cpp  PropertiesList.cpp  Scripting.cpp  StringConverter.cpp  StringUtils.cpp  StringsMap.cpp  Variant.cpp  module.cpp.in
src/Data/: ConfigFile.cpp  DataStream.cpp  FileDataStream.cpp  LocationManager.cpp  Serialization.cpp
src/Log/: ConsoleLogListener.cpp  LogManager.cpp  XMLLogListener.cpp
src/OSX/: Timer.cpp
src/Signals/: Signal.cpp  SignalsList.cpp  SignalsUtils.cpp
src/Utils/: Describable.cpp  Path.cpp  PropertiesList.cpp  StringConverter.cpp  StringUtils.cpp  StringsMap.cpp  Variant.cpp
src/Utils/OSX/: Timer.cpp
src/Utils/WIN32/: Timer.cpp
unittests/Athena-Core/: CMakeLists.txt  Utils.cpp  Utils.h  test_ConfigFile.cpp  test_Describable.cpp  test_FileDataStream.cpp  test_Iterators.cpp  test_LogManager.cpp  test_PropertiesList.cpp  test_Signal.cpp  test_SignalsList.cpp  test_SignalsUtils.cpp  test_StringUtils.cpp  test_StringsMap.cpp  test_Variant.cpp
unittests/Athena-Core/data/: TestConfigFile.cfg  TestConfigFile2.cfg  locations.json
unittests/Athena-Core/environments/: ScriptingTestEnvironment.h
unittests/Athena-Core/mocks/: Describable.h  LogListener.h
unittests/Athena-Core/module/: Describable.cpp
unittests/Athena-Core/scripts/: Describable_CategoriesOrder.js  Describable_DelayedProperties.js  Describable_GetProperties.js  Describable_PropertiesSerialization.js  Describable_SetProperties.js  Describable_UnknownProperties.js  PropertiesList_AppendList.js  PropertiesList_GetValueFromDefaultCategory.js  PropertiesList_GetValueFromSelectedCategory.js  PropertiesList_ModifyValue.js  PropertiesList_PrependList.js  PropertiesList_SelectCategories.js  PropertiesList_SetGetValueWithoutCategory.js  PropertiesList_ValuesEnumerationInNonExistingCategory.js  Signal_ConnectDisconnectFunctionSlot.js  Signal_ConnectDisconnectMethodSlot.js  Signal_ConnectOnlyOnceFunctionSlot.js  Signal_ConnectOnlyOneMethodSlot.js  Signal_FunctionSlot.js  Signal_TwoMethodSlots.js  SignalsList_ConnectDisconnectFunctionSlot.js  SignalsList_ConnectDisconnectMethodSlot.js  SignalsList_ConnectOnlyOnceFunctionSlot.js  SignalsList_ConnectOnlyOneMethodSlot.js  SignalsList_MethodSlot.js  SignalsList_TwoFunctionSlots.js  SignalsList_TwoMethodSlots.js  SignalsList_TwoSignals.js  SignalsUtils_CreateSignalID.js  SignalsUtils_RetrieveInvalidSignalName.js  SignalsUtils_RetrieveSignalName.js
unittests/Athena-Core/tests/: ConfigFile.cpp  Describable.cpp  FileDataStream.cpp  Iterators.cpp  LocationManager.cpp  LogManager.cpp  PropertiesList.cpp  SignalsList.cpp  SignalsUtils.cpp  StringsMap.cpp  Timer.cpp  Variant.cpp  scripting.cpp  scripting_Describable.cpp  test_ConfigFile.cpp  test_FileDataStream.cpp  test_LocationManager.cpp  test_LogManager.cpp  test_Path.cpp  test_PropertiesList.cpp  test_Signal.cpp  test_SignalsUtils.cpp  test_StringUtils.cpp  test_Variant.cpp
unittests/data/: lines.txt
unittests/scripting/: CMakeLists.txt
unittests/scripting/module/: Describable.cpp  module.cpp
unittests/scripting/scripts/: Describable_GetProperties.js  Describable_SetProperties.js  PropertiesList_InsertCategoryAtBeginning.js  PropertiesList_SetGetValueWithCategory.js  PropertiesList_ValuesEnumeration.js  PropertiesList_ValuesEnumerationInSelectedCategory.js  Signal_ConnectDisconnectFunctionSlot.js  Signal_ConnectOnlyOnceFunctionSlot.js  Signal_ConnectOnlyOneMethodSlot.js  Signal_MethodSlot.js  Signal_TwoFunctionSlots.js  SignalsList_ConnectDisconnectFunctionSlot.js  SignalsList_ConnectDisconnectMethodSlot.js  SignalsList_ConnectOnlyOnceFunctionSlot.js  SignalsList_ConnectOnlyOneMethodSlot.js  SignalsList_FunctionSlot.js  SignalsUtils_RetrieveSignalID.js
unittests/scripting/tests/: scripting.cpp
